# pythonnet-poc

./: .gitignore  PyWinAutoGui.py  README.md  pyproject.toml  pythonnet-poc.sln  pythonnet_poc.sln  test.robot
src/CalcTestLib/: CalcTestLib.csproj  Calculator.cs
src/WinAutoGuiLib/: WinAutoGui.cs  WinAutoGuiLib.csproj
src/pythonnet_poc/: poc.py
